<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/education_details"
    android:layout_width="235dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/education_label"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:editable="false"
        android:focusable="false"
        android:text="@string/education_label_text"
        android:textColor="@color/secondaryText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/last_school_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/education_label"
        android:layout_marginEnd="25dp"
        android:text="@string/last_school_duration_text"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/last_school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/education_label"
        android:layout_toEndOf="@+id/last_school_duration"
        android:text="@string/last_school_name_text"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/last_school_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/last_school_name"
        android:layout_below="@+id/last_school_name"
        android:layout_marginBottom="5dp"
        android:text="@string/last_school_faculty"
        android:textColor="@color/secondaryText"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/first_school_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/last_school_faculty"
        android:layout_marginEnd="25dp"
        android:text="@string/first_school_duration_text"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/first_school_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_school_faculty"
        android:layout_toEndOf="@+id/first_school_duration"
        android:text="@string/first_school_name_text"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/first_school_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/first_school_name"
        android:layout_below="@+id/first_school_name"
        android:text="@string/first_school_faculty"
        android:textColor="@color/secondaryText"
        android:textSize="10sp" />

</RelativeLayout>
