<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/work_details"
    android:layout_width="235dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/work_label"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:editable="false"
        android:focusable="false"
        android:text="@string/work_label_text"
        android:textColor="@color/secondaryText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/work_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/work_label"
        android:layout_marginEnd="25dp"
        android:text="@string/work_duration"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/position_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/work_label"
        android:layout_toEndOf="@+id/work_duration"
        android:text="@string/position_name"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/company_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/position_name"
        android:layout_below="@+id/position_name"
        android:text="@string/company_name_text"
        android:textColor="@color/secondaryText"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/position_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/company_name"
        android:layout_below="@+id/company_name"
        android:layout_marginBottom="5dp"
        android:text="@string/position_details"
        android:textColor="@color/primaryText"
        android:textSize="8sp" />

</RelativeLayout>