<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/certificates_details"
    android:layout_width="235dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/certificates_label"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:editable="false"
        android:focusable="false"
        android:text="@string/certificates_label_text"
        android:textColor="@color/secondaryText"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/first_certificate_details"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/certificates_label"
        android:layout_marginEnd="43dp"
        android:text="@string/first_certificate_date"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/second_certificate_date"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_certificate_details"
        android:layout_marginEnd="43dp"
        android:layout_marginTop="5dp"
        android:text="@string/second_certificate_date"
        android:textColor="@color/primaryText"
        android:textSize="12sp" />


</RelativeLayout>